# vec_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: allocator_callback.cxx.EA65F89439535933.idx  allocator_callback.hxx.FE7A4779F1D8B3DD.idx  application.cxx.724BC2E709695AA3.idx  application.hxx.CC30AF59EED46F57.idx  device.cxx.9569F179F317F237.idx  device.hxx.3498262670990EC9.idx  engine.cxx.8A2771E879B3CEBD.idx  engine.hxx.A71AFB083F02FD51.idx  main.cxx.BFB59D047FC23324.idx  renderer.cxx.BCF6BA649208D0D1.idx  renderer.hxx.CD68BB87325A110D.idx  swapchain.cxx.F8DFE0954184E74B.idx  swapchain.hxx.0BE94F2982321E1F.idx  window.cxx.C3A84FC8E253E311.idx  window.hxx.2DF390DF91EB4933.idx
include/: application.hxx  device.hxx  engine.hxx  pipeline.hxx  renderer.hxx  swapchain.hxx  window.hxx
src/: .engine.cxx.kate-swp  application.cxx  device.cxx  engine.cxx  main.cxx  pipeline.cxx  renderer.cxx  swapchain.cxx  window.cxx
